content/nomad/v1.8.x/content/commands/operator/snapshot/save.mdx
---
layout: docs
page_title: 'Commands: operator snapshot save'
description: |
  Saves snapshot of Nomad server state
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-24T15:54:54-06:00
last_modified: 2025-11-24T15:54:54-06:00
# END AUTO GENERATED METADATA
---

# Command: operator snapshot save

The `operator snapshot save` command retrieves an atomic, point-in-time
snapshot of the state of the Nomad servers, which includes jobs, nodes,
allocations, periodic jobs, and ACLs for [outage recovery].

If you enabled ACLs, you must supply a management token in order to perform
snapshot operations.

<Warning>

This command only saves a Raft snapshot. This snapshot does not include
keyrings. You must back up keyrings separately.

If you use this snapshot to recover a cluster, you also need to restore the
keyring onto at least one server. Refer to the Key Management's [Restoring the
Keyring from Backup][restore the keyring] section for instructions.

</Warning>

Run the `nomad operator snapshot save` command to create a snapshot from the
leader server.

This example saves the backup to `backup.snap`.

```shell-session
$ nomad operator snapshot save backup.snap
```

This example creates a potentially stale snapshot from any available server
and saves it to `backup.snap`. The `-stale` option is useful if no
leader is available.

```shell-session
$ nomad operator snapshot save -stale backup.snap
```

## Usage

```plaintext
nomad operator snapshot save [options] <file>
```

## General Options

@include 'general_options_no_namespace.mdx'

## Snapshot Save Options

- `-stale`: The stale argument defaults to `false`, which means the leader
  provides the result. If the cluster is in an outage state without a leader,
  you may need to set `-stale` to `true` to get the configuration from a
  non-leader server.

[outage recovery]: /nomad/tutorials/manage-clusters/outage-recovery
[restore the keyring]: /nomad/docs/operations/key-management#restoring-the-keyring-from-backup
